# master

./: .gitignore
1-sem/Anylogic/1-lab/: Additional_InfectionModel.alp  InfectionModel_task3.alp  PopulationModel_task4.alp  ProductModelBassBusted_task2.alp  SimpleProductModelBase_task1.alp
1-sem/Anylogic/3-lab/: RoadsModel.alp
1-sem/Anylogic/4-lab/: Laba_4.alp
1-sem/Effective_software_development_methodologies/1-lab/: EA_Laboratornaya_rabota_1.docx  (+2 more)
1-sem/Intelligent_systems/: README.md
1-sem/Parallel_and_distributed_programming/: README.md
1-sem/Parallel_and_distributed_programming/4-lab/: CMakeLists.txt  README.md
1-sem/Parallel_and_distributed_programming/4-lab/resources/: funcs.cu  test.cu
1-sem/Parallel_and_distributed_programming/4-lab/src/: README.md  main.cu
1-sem/Parallel_and_distributed_programming/4-lab/src/src/: main.cu
1-sem/fuzzy-logic/: 1-lab.ipynb  2-lab.ipynb  3-lab.ipynb  4-lab.ipynb  README.md
2-sem/hybrid_modeling/: pyproject.toml
2-sem/hybrid_modeling/1-lab/: Сценарий Обучения по ГМ.docx
2-sem/hybrid_modeling/1-lab/src/: poetry.toml  pyproject.toml
2-sem/hybrid_modeling/1-lab/src/math/: solution.ipynb
2-sem/hybrid_modeling/solutions/: 1-lab.ipynb  2-lab.ipynb  4-lab.ipynb
2-sem/hybrid_modeling/solutions/3-lab/: README.md  package-lock.json  package.json  results.json  tsconfig.json
2-sem/hybrid_modeling/solutions/3-lab/src/: main.ts  priority-queue.ts  queueing-system.ts  task.ts  utils.ts  worker-pool.ts  worker.ts
3-sem/reinforcement learning/: .gitignore  1_Multi_armed_Bandits_studenthard.ipynb  README.md
(+54 files in other folders)
