[tool.poetry]
name = "solutions"
version = "0.1.0"
description = ""
authors = ["Eaeajj <ozalesskiy71@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.3"
ipywidgets = "^8.1.2"
ipykernel = "^6.29.2"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
